--- a/app/src/main/res/layout/activity_edit_check_list.xml
+++ b/app/src/main/res/layout/activity_edit_check_list.xml
@@ -7,13 +7,22 @@
     tools:context=".view.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/show_recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/content_recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/content_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/show_recyclerView"/>
 
     <Button
         android:id="@+id/save_button"
