I add rename title menu in toolbar but it has some bug.

--- a/app/src/main/res/menu/menu_for_show.xml
+++ b/app/src/main/res/menu/menu_for_show.xml
@@ -7,7 +7,7 @@
         android:title="Edit" />
 
     <item
-        android:id="@+id/change"
-        android:title="Change"/>
+        android:id="@+id/rename"
+        android:title="Rename title"/>
 
 </menu>
