--- a/app/src/main/res/layout/activity_show_contents.xml
+++ b/app/src/main/res/layout/activity_show_contents.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/show_toolbar"
-        android:text="Check"/>
+        android:text="@string/check"/>
 
     <TextView
         android:id="@+id/ItemLine"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/show_toolbar"
         app:layout_constraintStart_toEndOf="@id/CheckLine"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Item"/>
+        android:text="@string/item"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ContentRecyclerView"
