--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -19,6 +19,6 @@
         android:textSize="21sp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:text="MEMO"/>
+        android:text="@string/memo"/>
 
 </LinearLayout>
