I somehow improve EditAdapter. But I wonder if how to solve this problem...

--- a/app/src/main/res/layout/edit_contents.xml
+++ b/app/src/main/res/layout/edit_contents.xml
@@ -18,6 +18,7 @@
         android:inputType="textAutoComplete"
         android:layout_margin="16dp"
         android:textSize="18sp"
-        android:autofillHints="" />
+        android:autofillHints=""
+        android:saveEnabled="false"/>
 
 </LinearLayout>
