I completely make EditAdapter works. I propably take all bug.

--- a/app/src/main/res/menu/menu_for_show.xml
+++ b/app/src/main/res/menu/menu_for_show.xml
@@ -10,4 +10,8 @@
         android:id="@+id/rename"
         android:title="@string/rename_title"/>
 
+    <item
+        android:id="@+id/delete"
+        android:title="@string/delete"/>
+
 </menu>
