--- a/app/src/main/res/layout/show_title.xml
+++ b/app/src/main/res/layout/show_title.xml
@@ -10,12 +10,21 @@
 
     <TextView
         android:id="@+id/title"
+        android:layout_weight="1"
         android:gravity="center"
         android:textSize="30sp"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:clickable="true"
         android:text="@string/title"
         android:focusable="true" />
+
+    <ImageButton
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:src="@drawable/ic_delete"
+        android:contentDescription="TODO" />
 
 </LinearLayout>
