--- a/app/src/main/res/layout/activity_show_contents.xml
+++ b/app/src/main/res/layout/activity_show_contents.xml
@@ -11,7 +11,7 @@
         android:id="@+id/show_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/deepSkyBlue"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         tools:ignore="MissingConstraints"/>
 
@@ -39,7 +39,7 @@
         android:id="@+id/ContentRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/control_buttons"
+        app:layout_constraintBottom_toTopOf="@id/control_buttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/CheckLine" />
@@ -48,7 +48,6 @@
         android:id="@+id/control_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:background="@android:color/white"
         android:elevation="4dp"
         android:orientation="horizontal"
