--- a/app/src/main/res/layout/show_title.xml
+++ b/app/src/main/res/layout/show_title.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:textSize="30sp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:clickable="true"
         android:text="@string/title"
         android:focusable="true" />
