--- a/app/src/main/res/layout/show_title.xml
+++ b/app/src/main/res/layout/show_title.xml
@@ -23,8 +23,6 @@
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:src="@drawable/ic_delete"
-        android:contentDescription="TODO" />
+        android:src="@drawable/ic_delete" />
 
 </LinearLayout>
