--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -13,10 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Space
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/Item"
-        android:gravity="center"
-        android:textSize="21sp"
+        android:textSize="23sp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="@string/memo"/>
