--- a/app/src/main/res/layout/activity_show_contents.xml
+++ b/app/src/main/res/layout/activity_show_contents.xml
@@ -11,7 +11,7 @@
         android:id="@+id/show_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/deepSkyBlue"
+        android:background="@color/dodgerBlue"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         tools:ignore="MissingConstraints"/>
 
