--- a/app/src/main/res/layout/edit_contents.xml
+++ b/app/src/main/res/layout/edit_contents.xml
@@ -11,7 +11,8 @@
     <CheckBox
         android:id="@+id/CheckBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
     <Space
         android:layout_width="20dp"
@@ -23,11 +24,18 @@
         android:textCursorDrawable="@drawable/cursor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:fontFamily="sans-serif-light"
         android:hint="@string/item"
         android:inputType="textAutoComplete"
-        android:textSize="23sp"
+        android:textSize="30sp"
         android:autofillHints=""
         android:saveEnabled="false"/>
+
+    <ImageButton
+        android:id="@+id/delete_button_for_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete" />
 
 </LinearLayout>
