--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -17,7 +17,7 @@
         android:layout_width="20dp"
         android:layout_height="wrap_content"/>
 
-    <EditText
+    <TextView
         android:id="@+id/Item"
         android:background="#00000000"
         android:textSize="23sp"
