--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -19,10 +19,17 @@
 
     <EditText
         android:id="@+id/Item"
+        android:layout_weight="1"
         android:background="#00000000"
-        android:textSize="23sp"
+        android:textSize="25sp"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:text="@string/memo"/>
+
+    <ImageButton
+        android:id="@+id/delete_contents_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete" />
 
 </LinearLayout>
