--- a/app/src/main/res/menu/menu_for_show.xml
+++ b/app/src/main/res/menu/menu_for_show.xml
@@ -2,18 +2,12 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
     <item
-        android:id="@+id/edit"
-        android:title="@string/edit" />
+        android:id="@+id/help"
+        android:title="@string/help" />
 
     <item
-        android:id="@+id/rename"
-        android:title="@string/rename_title"/>
-
-    <item
-        android:id="@+id/delete"
-        android:title="@string/delete"/>
-        -->
+        android:id="@+id/settings"
+        android:title="@string/settings"/>
 
 </menu>
