--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -10,6 +10,7 @@
 
     <CheckBox
         android:id="@+id/CheckBox"
+        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -21,15 +22,9 @@
         android:id="@+id/Item"
         android:layout_weight="1"
         android:background="#00000000"
-        android:textSize="25sp"
+        android:textSize="30sp"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:text="@string/memo"/>
-
-    <ImageButton
-        android:id="@+id/delete_contents_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete" />
 
 </LinearLayout>
