--- a/app/src/main/res/layout/fragment_show_contents.xml
+++ b/app/src/main/res/layout/fragment_show_contents.xml
@@ -48,11 +48,11 @@
             android:src="@drawable/ic_rename"/>
 
         <ImageButton
-            android:id="@+id/check_out_button"
+            android:id="@+id/delete_check_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_check_out" />
+            android:src="@drawable/ic_delete" />
 
     </LinearLayout>
 
