I add help screen.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/dodgerBlue"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:focusableInTouchMode="true"
         tools:ignore="MissingConstraints">
 
     </androidx.appcompat.widget.Toolbar>
