--- a/app/src/main/res/layout/fragment_show_contents.xml
+++ b/app/src/main/res/layout/fragment_show_contents.xml
@@ -19,6 +19,7 @@
         android:id="@+id/show_contents_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:focusableInTouchMode="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/check_line"
         app:layout_constraintEnd_toEndOf="parent"
