--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -21,6 +21,7 @@
     <EditText
         android:id="@+id/Item"
         android:layout_weight="1"
+        android:layout_gravity="center_vertical"
         android:background="#00000000"
         android:textSize="30sp"
         android:layout_height="wrap_content"
