--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="dodgerBlue">#1E90FF</color>
+    <color name="paleTurquoise">#AFEEEE</color>
 </resources>
