--- a/app/src/main/res/layout/fragment_show_contents.xml
+++ b/app/src/main/res/layout/fragment_show_contents.xml
@@ -23,7 +23,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/check_line"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/control_buttons" />
+        app:layout_constraintBottom_toTopOf="@id/coordinatorLayout" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/show_contents_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/control_buttons"/>
 
     <LinearLayout
         android:id="@+id/control_buttons"
