I optimized this app.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+
+        <!--
+        本番：ca-app-pub-1648529608275820/8004736114
+        テスト：ca-app-pub-3940256099942544/6300978111
+        -->
     </com.google.android.gms.ads.AdView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
