--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -26,6 +27,8 @@
         android:textSize="30sp"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:text="@string/memo"/>
+        android:text="@string/memo"
+        android:autofillHints=""
+        tools:ignore="LabelFor" />
 
 </LinearLayout>
