--- a/app/src/main/res/layout/fragment_show_contents.xml
+++ b/app/src/main/res/layout/fragment_show_contents.xml
@@ -48,23 +48,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_add"/>
-
-        <!--
-        <ImageButton
-            android:id="@+id/rename_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/ic_rename"/>
-            -->
+            android:src="@drawable/ic_add"
+            android:contentDescription="@string/add" />
 
         <ImageButton
             android:id="@+id/delete_check_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/ic_delete" />
+            android:src="@drawable/ic_delete"
+            android:contentDescription="@string/delete" />
 
     </LinearLayout>
 
