--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -19,4 +19,10 @@
             android:dialogTitle="@string/text_size"
             android:defaultValue="medium"/>
 
+        <EditTextPreference
+            app:key="version"
+            app:title="version"
+            android:defaultValue="@string/setting_version"
+            app:isPreferenceVisible="false"/>
+
 </androidx.preference.PreferenceScreen>
