--- a/app/src/main/res/layout/fragment_show_contents.xml
+++ b/app/src/main/res/layout/fragment_show_contents.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:focusableInTouchMode="true"
+        android:contentDescription="@string/show_contents_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/check_line"
         app:layout_constraintEnd_toEndOf="parent"
