--- a/app/src/main/res/layout/fragment_show_title.xml
+++ b/app/src/main/res/layout/fragment_show_title.xml
@@ -9,6 +9,7 @@
         android:id="@+id/show_title_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/show_title_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
