--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -23,6 +23,7 @@
     <EditText
         android:id="@+id/Item"
         android:layout_weight="1"
+        android:longClickable="false"
         android:layout_gravity="center_vertical"
         android:background="#00000000"
         android:layout_height="wrap_content"
