--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@android:color/white"
-    android:elevation="4dp"
-    android:orientation="horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <CheckBox
-        android:id="@+id/CheckBox"
-        android:contentDescription="@string/check"
-        android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <data>
+        <variable
+            name="editViewModel"
+            type="com.wsr.shopping_friend.view_model.EditViewModel" />
 
-    <Space
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"/>
+        <variable
+            name="index"
+            type="Integer" />
+    </data>
 
-    <EditText
-        android:id="@+id/Item"
-        android:layout_weight="1"
-        android:longClickable="false"
-        android:layout_gravity="center_vertical"
-        android:background="#00000000"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/LinearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="0dp"
-        android:text="@string/memo"
-        android:textSize="30sp"
-        android:autofillHints=""
-        tools:ignore="LabelFor" />
+        android:layout_margin="10dp"
+        android:background="@android:color/white"
+        android:elevation="4dp"
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <CheckBox
+            android:id="@+id/CheckBox"
+            android:contentDescription="@string/check"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Space
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/Item"
+            android:layout_weight="1"
+            android:longClickable="false"
+            android:layout_gravity="center_vertical"
+            android:background="#00000000"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:text="@{editViewModel.list[index].item}"
+            android:textSize="30sp"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
