--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -26,7 +26,7 @@
         <CheckBox
             android:id="@+id/CheckBox"
             android:contentDescription="@string/check"
-            android:checked="@{editViewModel.list[index].check}"
+            android:checked="@={editViewModel.list[index].check}"
             android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -43,7 +43,7 @@
             android:background="#00000000"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:text="@{editViewModel.list[index].item}"
+            android:text="@={editViewModel.list[index].item}"
             android:textSize="30sp"
             android:autofillHints=""
             tools:ignore="LabelFor" />
