--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -9,8 +9,12 @@
             type="com.wsr.shopping_friend.view_model.EditViewModel" />
 
         <variable
-            name="index"
-            type="Integer" />
+            name="id"
+            type="String" />
+
+        <variable
+            name="value"
+            type="com.wsr.shopping_friend.info_list_database.InfoList" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -25,7 +29,7 @@
         <CheckBox
             android:id="@+id/CheckBox"
             android:contentDescription="@string/check"
-            android:checked="@={editViewModel.liveList[index].check}"
+            android:checked="@{value.check}"
             android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -42,7 +46,7 @@
             android:background="#00000000"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:text="@={editViewModel.liveList[index].item}"
+            android:text="@{value.item}"
             android:textSize="30sp"
             android:autofillHints=""
             tools:ignore="LabelFor" />
