--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -29,7 +29,7 @@
         <CheckBox
             android:id="@+id/CheckBox"
             android:contentDescription="@string/check"
-            android:checked="@{value.check}"
+            android:checked="@={value.check}"
             android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -46,7 +46,7 @@
             android:background="#00000000"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:text="@{value.item}"
+            android:text="@={value.item}"
             android:textSize="30sp"
             android:autofillHints=""
             tools:ignore="LabelFor" />
