--- a/app/src/main/res/layout/add_checklist.xml
+++ b/app/src/main/res/layout/add_checklist.xml
@@ -26,7 +26,7 @@
         android:elevation="4dp"
         android:orientation="horizontal">
 
-        <CheckBox
+        <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/CheckBox"
             android:contentDescription="@string/check"
             android:checked="@={value.check}"
@@ -38,7 +38,7 @@
             android:layout_width="20dp"
             android:layout_height="wrap_content"/>
 
-        <EditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/Item"
             android:layout_weight="1"
             android:longClickable="false"
