--- a/app/src/main/res/layout/fragment_show_title.xml
+++ b/app/src/main/res/layout/fragment_show_title.xml
@@ -5,13 +5,23 @@
     android:layout_height="match_parent"
     android:id="@+id/show_title_fragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/title_toolbar"
+        app:title="@string/app_name"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/dodgerBlue"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:focusableInTouchMode="true"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/show_title_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/show_title_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
