--- a/app/src/main/res/menu/show_menu_white.xml
+++ b/app/src/main/res/menu/show_menu_white.xml
@@ -5,13 +5,13 @@
     <item
         android:id="@+id/share"
         android:title="@string/share"
-        android:icon="@drawable/ic_share"
+        android:icon="@drawable/ic_share_white"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/reload"
         android:title="@string/reload"
-        android:icon="@drawable/ic_reload"
+        android:icon="@drawable/ic_reload_white"
         app:showAsAction="ifRoom"/>
 
 </menu>
