[fix] 画面に反映されないバグを修正

--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -44,7 +44,7 @@
         <EditTextPreference
             app:key="app_version"
             app:title="Version"
-            android:defaultValue="1.0"
+            android:defaultValue="@string/application_version"
             app:useSimpleSummaryProvider="true"
             android:enabled="false"
             />
