--- a/app/src/main/res/menu/show_menu_white.xml
+++ b/app/src/main/res/menu/show_menu_white.xml
@@ -9,9 +9,9 @@
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/reload"
-        android:title="@string/reload"
-        android:icon="@drawable/ic_reload_white"
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        android:icon="@drawable/ic_settings_white"
         app:showAsAction="ifRoom"/>
 
 </menu>
